--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calculadora Avançada com Math.js</title>
     <link rel="stylesheet" href="calc_style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.7.0/math.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="calculator">
@@ -14,22 +15,22 @@
             <button onclick="appendValue('1')">1</button>
             <button onclick="appendValue('2')">2</button>
             <button onclick="appendValue('3')">3</button>
-            <button onclick="appendValue('+')" style="background-color: aquamarine;">+</button>
+            <button onclick="appendValue('+')" style="background-color: aquamarine;"><i class="fa-solid fa-plus"></i></button>
 
             <button onclick="appendValue('4')">4</button>
             <button onclick="appendValue('5')">5</button>
             <button onclick="appendValue('6')">6</button>
-            <button onclick="appendValue('-')" style="background-color: aquamarine;">-</button>
+            <button onclick="appendValue('-')" style="background-color: aquamarine;"><i class="fa-solid fa-minus"></i></button>
 
             <button onclick="appendValue('7')">7</button>
             <button onclick="appendValue('8')">8</button>
             <button onclick="appendValue('9')">9</button>
-            <button onclick="appendValue('*')" style="background-color: aquamarine;">*</button>
+            <button onclick="appendValue('*')" style="background-color: aquamarine;"><i class="fa-solid fa-xmark"></i></button>
 
-            <button onclick="clearDisplay()" style="background-color: rgb(255, 126, 126);">C</button>
+            <button onclick="clearDisplay()" style="background-color: rgb(255, 126, 126);"><i class="fa-solid fa-trash"></i></button>
             <button onclick="appendValue('0')">0</button>
             <button onclick="calculateResult()" style="background-color: rgb(194, 255, 103);">=</button>
-            <button onclick="appendValue('/')" style="background-color: aquamarine;">/</button>
+            <button onclick="appendValue('/')" style="background-color: aquamarine;"><i class="fa-solid fa-divide"></i></button>
 
             <button onclick="calculateSqrt()" style="background-color: rgb(163, 163, 255);">√</button>
             <button onclick="appendValue('sin(')" style="background-color: rgb(163, 163, 255);">sin</button>
@@ -46,7 +47,7 @@
             <button onclick="appendValue('.')" style="background-color: rgb(163, 163, 255);">.</button>
             <button onclick="calculatePercentage()" style="background-color: rgb(163, 163, 255);">%</button>
 
-            <button onclick="clearLast()" style="background-color: rgb(255, 90, 90); font-weight: bold;">←</button>
+            <button onclick="clearLast()" style="background-color: rgb(255, 90, 90); font-weight: bold;"><i class="fa-solid fa-delete-left"></i></button>
         </div>
     </div>
 
