--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Avançada com Math.js</title>
+    <link rel="shortcut icon" href="<i class="fa-solid fa-calculator"></i>" type="image/x-icon">
     <link rel="stylesheet" href="calc_style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.7.0/math.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -32,7 +33,7 @@
             <button onclick="calculateResult()" style="background-color: rgb(194, 255, 103);">=</button>
             <button onclick="appendValue('/')" style="background-color: aquamarine;"><i class="fa-solid fa-divide"></i></button>
 
-            <button onclick="calculateSqrt()" style="background-color: rgb(163, 163, 255);">√</button>
+            <button onclick="calculateSqrt()" style="background-color: rgb(163, 163, 255);"><i class="fa-solid fa-square-root-variable"></i></button>
             <button onclick="appendValue('sin(')" style="background-color: rgb(163, 163, 255);">sin</button>
             <button onclick="appendValue('cos(')" style="background-color: rgb(163, 163, 255);">cos</button>
             <button onclick="appendValue('tan(')" style="background-color: rgb(163, 163, 255);">tan</button>
