--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Avançada com Math.js</title>
-    <link rel="shortcut icon" href="https://fontawesome.com/icons/calculator?f=classic&s=solid" type="image/x-icon">
+    <link rel="shortcut icon" href="https://fontawesome.com/icons/calculator?f=classic&s=solid">
     <link rel="stylesheet" href="calc_style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.7.0/math.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
