--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Avançada com Math.js</title>
-    <link rel="shortcut icon" href="https://fontawesome.com/icons/calculator?f=classic&s=solid">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='black' d='M400 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zm-48 304c0 8.8-7.2 16-16 16H112c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h224c8.8 0 16 7.2 16 16v48zm0-96c0 8.8-7.2 16-16 16H112c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h224c8.8 0 16 7.2 16 16v48zm-224 96v48c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16zm0-96v-48c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16zm144 144c0 8.8-7.2 16-16 16h-96c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h96c8.8 0 16 7.2 16 16v48zm96 0c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v48zm0-96c0 8.8-7.2 16-16 16h-32c-8.8 0-16-7.2-16-16v-48c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v48z'%3E%3C/path%3E%3C/svg%3E">
     <link rel="stylesheet" href="calc_style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.7.0/math.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
