--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Avançada com Math.js</title>
     <link rel="stylesheet" href="calc_style.css">
-    <link rel="icon" type="image/svg+xml" href="icons/calculator-solid.svg">
+    <link rel="icon" type="image/svg+xml" href="calculator-solid.svg">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.7.0/math.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
